# ugto_live_coding

./: README.md  main.py  presentacion.html  presentacion.qmd  pyproject.toml
.jupyter_cache/: global.db
latex/: Diff.tex  Manuscript.tex  refs.bib
